--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,11 @@
-name: Publish NPM package to Cloudsmith
+name: Manual Cloudsmith NPM Workflow
 
+# Trigger manually from GitHub UI
 on:
   workflow_dispatch:
 
 jobs:
-  publish:
+  build-and-publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,15 +17,15 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Configure NPM registry for Cloudsmith
+      - name: Configure NPM to use Cloudsmith
         run: |
-          npm config set registry https://npm.cloudsmith.io/testcheck/product-demo/
-          npm config set https://npm.cloudsmith.io/testcheck/product-demo/:_authToken=${{ secrets.CLOUDSMITH_TOKEN }}
+          echo "registry=https://npm.cloudsmith.io/testcheck/product-demo/" > .npmrc
+          echo "//npm.cloudsmith.io/testcheck/product-demo/:_authToken=${{ secrets.CLOUDSMITH_TOKEN }}" >> .npmrc
 
-      - name: Install dependencies
-        run: npm install express 
+      - name: Install dependencies from Cloudsmith
+        run: npm install colors
 
-      - name: Pack the package
+      - name: Pack the project
         run: npm pack
 
       - name: Install Cloudsmith CLI
@@ -35,7 +36,7 @@ jobs:
 
       - name: Push package to Cloudsmith
         run: |
-          PACKAGE_TGZ=$(ls *.tgz)
-          cloudsmith push npm testcheck/product-demo "$PACKAGE_TGZ"
+          PACKAGE_FILE=$(ls *.tgz)
+          cloudsmith push npm testcheck/product-demo "$PACKAGE_FILE"
         env:
           CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_TOKEN }}
