--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           echo "registry=https://npm.cloudsmith.io/testcheck/product-demo/" > .npmrc
           echo "//npm.cloudsmith.io/testcheck/product-demo/:_authToken=${{ secrets.CLOUDSMITH_TOKEN }}" >> .npmrc
+      - name: print .npmrc file
+        run: cat .npmrc
 
       - name: Install dependencies from Cloudsmith
         run: npm install colors
