--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -25,28 +25,29 @@ jobs:
       - name: List and Promote Ready-for-Production Packages
         run: |
           echo "Fetching packages tagged as 'ready-for-production' in staging..."
-
-          PACKAGE_DATA=$(cloudsmith list package \
-            $CLOUDSMITH_NAMESPACE/$CLOUDSMITH_STAGING_REPO \
+      
+          PACKAGE_DATA=$(cloudsmith list packages \
+            "$CLOUDSMITH_NAMESPACE/$CLOUDSMITH_STAGING_REPO" \
             -q "tag:ready-for-production" -F json)
-
-          PACKAGE_IDS=$(echo "$PACKAGE_DATA" | jq -r '.[]?.identifier_perm')
-
+      
+          PACKAGE_IDS=$(echo "$PACKAGE_DATA" | jq -r '.data[].identifier_perm')
+      
           if [[ -z "$PACKAGE_IDS" ]]; then
             echo "No packages found with 'ready-for-production' tag. Exiting."
             exit 0
           fi
-
+      
           echo "Packages ready for promotion:"
           echo "$PACKAGE_IDS"
-
+      
           for IDENTIFIER in $PACKAGE_IDS; do
             echo "Promoting package: $IDENTIFIER"
             cloudsmith mv --yes \
               "$CLOUDSMITH_NAMESPACE/$CLOUDSMITH_STAGING_REPO/$IDENTIFIER" \
               "$CLOUDSMITH_NAMESPACE/$CLOUDSMITH_PRODUCTION_REPO"
           done
-
+      
           echo "All tagged packages have been promoted successfully."
         env:
           CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_TOKEN }}
+      
